support fully fixed-float prediction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.ino": "cpp",
         "layers.h": "c",
         "keras_mnist_dcae_params_float.h": "c",
-        "conv2d_0.h": "c"
+        "conv2d_0.h": "c",
+        "stdio.h": "c"
     }
 }
