generate test_data_generator

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "layers.h": "c",
         "keras_mnist_dcae_params_float.h": "c",
         "conv2d_0.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "test_data.h": "c"
     }
 }
