--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "conv2d_0.h": "c",
         "stdio.h": "c",
         "test_data.h": "c",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "array_printf_fix16.h": "c"
     }
 }
