--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "test_data.h": "c",
         "iosfwd": "cpp",
         "array_printf_fix16.h": "c",
-        "pointwise_conv2d.h": "c"
+        "pointwise_conv2d.h": "c",
+        "stdint.h": "c"
     }
 }
